# cactus-app-1

./: .gitignore  CONTRIBUTING.md  Cactus.podspec  LICENSE  README.md  nitro.json  package-lock.json  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/cactus/: CactusPackage.kt  HybridCactusCrypto.kt  HybridCactusDeviceInfo.kt  HybridCactusFileSystem.kt  HybridCactusImage.kt
backend/: API.md  README.md  app.json  index.js  package.json  tsconfig.json
backend/src/: App.tsx
cpp/: HybridCactus.cpp  HybridCactus.hpp  HybridCactusUtil.cpp  HybridCactusUtil.hpp
example/: app.json  metro.config.js  package.json
example/android/: settings.gradle
example/ios/: Podfile
example/src/: App.tsx  CameraGallery.tsx  ChatScreen.tsx  CompletionScreen.tsx  GalleryScreen.tsx  PerformanceScreen.tsx  RAGScreen.tsx  STTScreen.tsx  ToolCallingScreen.tsx  VisionScreen.tsx  backendApi.ts
ios/: HybridCactusCrypto.swift  HybridCactusDeviceInfo.swift  HybridCactusFileSystem.swift  HybridCactusImage.swift
ios/cactus_util.xcframework/: Info.plist
src/: index.tsx
src/api/: Database.ts  RemoteLM.ts
src/classes/: CactusLM.ts  CactusSTT.ts
src/config/: CactusConfig.ts
src/constants/: packageVersion.ts
src/hooks/: useCactusLM.ts  useCactusSTT.ts
src/native/: Cactus.ts  CactusCrypto.ts  CactusDeviceInfo.ts  CactusFileSystem.ts  CactusImage.ts  CactusUtil.ts  index.ts
src/specs/: Cactus.nitro.ts  CactusCrypto.nitro.ts  (+4 more)
(+33 files in other folders)
